@@ -1,9 +1,0 @@
-
-public class Chainring extends Gear {
-	
-	public Chainring(int teethCount) {
-		super(teethCount);
-	}
-	
-	
-}
