@@ -1,17 +1,0 @@
-
-public class Gear {
-
-	private int teethCount;
-	
-	public Gear(int teethCount) {
-		this.teethCount = teethCount;
-	}
-	
-	public void setTeeth(int teethCount) {
-		this.teethCount = teethCount;
-	}
-	
-	public int getTeeth() {
-		return teethCount;
-	}
-}
