@@ -2,16 +2,14 @@ import java.util.ArrayList;
 
 import javafx.scene.Node;
 
-import edu.princeton.cs.introcs.StdOut;
 import javafx.collections.FXCollections;
-import javafx.collections.ObservableList;
 import javafx.geometry.Insets;
 import javafx.geometry.Pos;
-import javafx.scene.chart.LineChart;
+
 import javafx.scene.control.Button;
 import javafx.scene.control.ChoiceBox;
 import javafx.scene.control.Label;
-import javafx.scene.image.ImageView;
+
 import javafx.scene.layout.GridPane;
 
 public class Layout
