@@ -11,3 +11,4 @@
 12/08/2019, D. Khakhalov: Completed transfer of the user input to the graph.
 12/10/2019, D. Khakhalov: Implemented action for Reset button, fixed bug with plotting a chainring without sprockets.
 12/10/2019, D. Khakhalov: Fixed calculator test.
+12/11/2019, D. Khakhalov: Added bicycle tests.
